--- a/POSTERITY/index.html
+++ b/POSTERITY/index.html
@@ -133,7 +133,7 @@
     <div class="besedilo-spodaj" id="besedilo"></div>
     
     <audio id="zvok" loop>
-        <source src="/assets/INVERSION.mp3" type="audio/mpeg">
+        <source src="/assets/INVERSION.MP3" type="audio/mpeg">
     </audio>
     
     <script>
