--- a/S_HE_IS_STILL_HER_E/index.html
+++ b/S_HE_IS_STILL_HER_E/index.html
@@ -524,7 +524,7 @@
         <div class="visualizer-container">
         </div>
 
-        <div class="upload-hint">Musik hier ablegen</div>
+        <div class="upload-hint">musik hier ablegen</div>
     </div>
 
     <div class="drag-overlay">
