--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<html><head><meta http-equiv="refresh" content="0;url=/WINDMILLS/"></head></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{background:#000;min-height:100vh;display:flex;align-items:center;justify-content:center}
+.frame{border:2px solid #fff;line-height:0}
+.frame img{display:block;max-width:420px;height:auto}
+</style>
+</head>
+<body>
+<div class="frame"><img src="G8pOu9kW8AAUOub.jpg"></div>
+</body>
+</html>
